created application form in contacts

--- a/contacts.html
+++ b/contacts.html
@@ -159,15 +159,22 @@
         <section class="contacts__form">
             <div class="contacts__form-content">
                 <div class="form__map">
-
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.6968904681094!2d-74.0046522848047!3d40.724688679330455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2598c41edbcf7%3A0x5e47a0728e2f9b4b!2zMTc2IFNwcmluZyBTdCwgTmV3IFlvcmssIE5ZIDEwMDEyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1680380270637!5m2!1sru!2sua" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
                 <div class="contacts__application-form">
-                    <input class="form-contacts" type="text" placeholder= "Your Name" required>
-                    <input class="form-contacts" type="text" placeholder= "Phone Number" required>
-                    <input class="form-contacts" type="email"  placeholder="Email" required>
-                    <textarea class="form-contacts" placeholder="Type your message" rows="1"></textarea>
-                    <button type="button" class="form-btn">Send a Message</button>
+                    <div class="form__title">
+                      <p class="form__title-text">Hit Us Up!</p>
+                    </div>
+
+                    <div class="form__sub-title">
+                      <p class="form__sub-title-text">Fill out the form below and we'll contact you as soon as we can.</p>
+                    </div>
+                    <input class="form-contacts" type="text" placeholder= "Your Name*" required>
+                    <input class="form-contacts" type="text" placeholder= "Phone Number*" required>
+                    <input class="form-contacts" type="email"  placeholder="Email*" required>
+                    <input class="form-contacts" type="text" placeholder="Type your message"></textarea>
+                    <button type="button" class="contacts__form-button">Send a Message</button>
                 </div>
             </div>
         </section>
