--- a/contacts.html
+++ b/contacts.html
@@ -159,7 +159,7 @@
         <section class="contacts__form">
             <div class="contacts__form-content">
                 <div class="form__map">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.6968904681094!2d-74.0046522848047!3d40.724688679330455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2598c41edbcf7%3A0x5e47a0728e2f9b4b!2zMTc2IFNwcmluZyBTdCwgTmV3IFlvcmssIE5ZIDEwMDEyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1680380270637!5m2!1sru!2sua" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe class="contacts__form-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.6968904681094!2d-74.0046522848047!3d40.724688679330455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2598c41edbcf7%3A0x5e47a0728e2f9b4b!2zMTc2IFNwcmluZyBTdCwgTmV3IFlvcmssIE5ZIDEwMDEyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1680380270637!5m2!1sru!2sua"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
                 <div class="contacts__application-form">
@@ -173,7 +173,7 @@
                     <input class="form-contacts" type="text" placeholder= "Your Name*" required>
                     <input class="form-contacts" type="text" placeholder= "Phone Number*" required>
                     <input class="form-contacts" type="email"  placeholder="Email*" required>
-                    <input class="form-contacts" type="text" placeholder="Type your message"></textarea>
+                    <input class="form-contacts" type="text" placeholder="Type your message">
                     <button type="button" class="contacts__form-button">Send a Message</button>
                 </div>
             </div>
