add background to about us images

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     </section>
 
     <!-- Reznik Anastasiia -->
-    <section class="about-us" id="about-us">
+    <section class="about-us container" id="about-us">
         <div class="wave-container-about-us">
             <img class="wave_brand_color" src="img/about-us/about-us-wave.svg" alt="Wave brand color">
         </div>
@@ -403,17 +403,23 @@
             various ice cream flavors and try our seasonal and holiday desserts and drinks.</p>
         <div class="about-us__cards cards">
             <div class="cards__experience">
+                <div class="about-us-images">
                 <img class="cards__images" src="img/about-us/shop-logo.svg" alt="Shop Logo">
+                </div>
                 <h3 class="cards__title">20+</h3>
                 <p class="cards__text">Years of experience</p>
             </div>
             <div class="cards__experience">
+                <div class="about-us-images">
                 <img class="cards__images" src="img/about-us/clerk.svg" alt="Clerk Logo">
+                </div>
                 <h3 class="cards__title">25</h3>
                 <p class="cards__text">Professional ice cream makers</p>
             </div>
             <div class="cards__experience">
+                <div class="about-us-images">
                 <img class="cards__images" src="img/about-us/ice-cream-logo.svg" alt="Ice Cream Logo">
+                </div>
                 <h3 class="cards__title">18+</h3>
                 <p class="cards__text">Ice cream shops in New York</p>
             </div>
