--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
           Our mission is to offer the best experience and the tastiest desserts
           to our clients.
         </p>
-        <p class="about-us__main-text">
+        <p class="about-us__main-text container">
           We are Mr. Snowman, a small yet cozy NY cafe network. We have been
           handcrafting the most delicious ice cream since 1999, and these days,
           our menu is more varied than ever before. Come to us to enjoy various
