fix about-us block size

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
       </section>
 
       <!-- Reznik Anastasiia -->
-      <section class="about-us container" id="about-us">
+      <section class="about-us" id="about-us">
         <div class="wave-container-about-us">
           <img
             class="wave_brand_color"
