--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,7 @@
             <nav class="navbar navbar-expand-lg bg-transparent container">
               <div class="container-fluid">
                 <a
-                  class="nav-item nav-link navbar-brand d-block d-lg-none"
+                  class="a-logo nav-item nav-link navbar-brand d-block d-lg-none"
                   href="index.html"
                 >
                   <div class="header__nav-image">
@@ -67,7 +67,7 @@
                       >
                     </div>
                     <a
-                      class="nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
+                      class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
                       href="index.html"
                     >
                       <div class="header__nav-image">
