--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-expand-lg bg-transparent container">
         <div class="container-fluid">
           <a
-            class="nav-item nav-link navbar-brand d-block d-lg-none"
+            class="a-logo nav-item nav-link navbar-brand d-block d-lg-none"
             href="index.html"
           >
             <div class="header__nav-image">
@@ -65,7 +65,7 @@
                 >
               </div>
               <a
-                class="nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
+                class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
                 href="index.html"
               >
                 <div class="header__nav-image">
@@ -87,7 +87,7 @@
                   href="index.html#blog"
                   >Blog</a
                 >
-                <a class="nav-item nav-link align-self-center" href="#"
+                <a class="nav-item nav-link align-self-center" href="contacts.html"
                   >Contacts</a
                 >
               </div>
