fix error with modal window

--- a/index.html
+++ b/index.html
@@ -606,8 +606,7 @@
                                 data-bs-target="#exampleModal">
                             <span class="block__text-style">Book a Table</span>
                         </button>
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        <div class="modal fade" id="exampleModal" tabindex="-1"
                              aria-hidden="true">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
