add dividers to about-us

--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@
                 alt="Shop Logo"
               />
             </div>
+            <hr class="solid">
             <h3 class="cards__title">20+</h3>
             <p class="cards__text">Years of experience</p>
           </div>
@@ -641,6 +642,7 @@
                 alt="Clerk Logo"
               />
             </div>
+            <hr class="solid">
             <h3 class="cards__title">25</h3>
             <p class="cards__text">Professional ice cream makers</p>
           </div>
@@ -652,6 +654,7 @@
                 alt="Ice Cream Logo"
               />
             </div>
+            <hr class="solid">
             <h3 class="cards__title">18+</h3>
             <p class="cards__text">Ice cream shops in New York</p>
           </div>
@@ -663,6 +666,7 @@
                 alt="Tastes Logo"
               />
             </div>
+            <hr class="solid">
             <h3 class="cards__title">50</h3>
             <p class="cards__text">Great tastes of ice cream</p>
           </div>
