--- a/index.html
+++ b/index.html
@@ -159,15 +159,21 @@
           </p>
         </div>
         <div class="tastes__cards">
-            <button class="cards__prev-slide">
-                <img class="prev-slide__arrow-tastes color-arrows-with-size" src="img/tastes/tastes-arrow-right.svg"
-                     alt="icon">
-            </button>
-            <div class="cards__carousel"></div>
-            <button class="cards__next-slide">
-                <img class="next-slide__arrow-tastes color-arrows-with-size" src="img/tastes/tastes-arrow-right.svg"
-                     alt="icon">
-            </button>
+          <button class="cards__prev-slide">
+            <img
+              class="prev-slide__arrow-tastes color-arrows-with-size"
+              src="img/tastes/tastes-arrow-right.svg"
+              alt="icon"
+            />
+          </button>
+          <div class="cards__carousel"></div>
+          <button class="cards__next-slide">
+            <img
+              class="next-slide__arrow-tastes color-arrows-with-size"
+              src="img/tastes/tastes-arrow-right.svg"
+              alt="icon"
+            />
+          </button>
         </div>
         <div class="mask-additional-button">
           <a
@@ -589,80 +595,117 @@
             </div>
           </div>
         </div>
-    </section>
+      </section>
 
-    <!-- Book a table Turkevych Vitalii -->
-    <section class="book-a-table">
+      <!-- Book a table Turkevych Vitalii -->
+      <section class="book-a-table">
         <div class="book-a-table__background">
-            <div class="background__img">
-                <div class="img__book-table">
-                    <div class="book-table__block">
-                        <h2 class="block__table-title">Book a table</h2>
-                        <p class="block__table-sub-title">
-                            Hurry Up to Book the
-                            Coziest Table Now!
-                        </p>
-                        <button type="button" class="mask-additional-button__block" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal">
-                            <span class="block__text-style">Book a Table</span>
-                        </button>
-                        <div class="modal fade" id="exampleModal" tabindex="-1"
-                             aria-hidden="true">
-                            <div class="modal-dialog modal-lg">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <div class="header__btn-close">
-                                            <div class="btn-close__icon" data-bs-dismiss="modal"
-                                                 aria-label="Close"></div>
-                                        </div>
-                                        <h2 class="modal-header__title">Booking</h2>
-                                        <p class="modal-header__sub-title">Book a Table</p>
-                                        <p class="modal-header__text">Please fill out the form below</p>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form action="submit" method="POST" class="modal-body__form-book-table">
-                                            <label for="name-input-book-table"></label>
-                                            <input class="form-book-table__inputs-book-table" id="name-input-book-table" type="text"
-                                                   placeholder="Your Name*">
-                                            <label for="phone-input-book-table"></label>
-                                            <input class="form-book-table__inputs-book-table" id="phone-input-book-table" type="text"
-                                                   placeholder="Phone number*">
-                                            <label for="email-input-book-table"></label>
-                                            <input class="form-book-table__inputs-book-table" id="email-input-book-table" type="text"
-                                                   placeholder="Email*">
-                                            <label for="date-input-book-table"></label>
-                                            <input class="form-book-table__inputs-book-table"
-                                                   placeholder="Choose date"
-                                                   type="text"
-                                                   onfocus="(this.type='date')"
-                                                   id="date-input-book-table"
-                                            >
-                                            <label for="number-people-input-book-table"></label>
-                                            <input class="form-book-table__inputs-book-table" id="number-people-input-book-table" placeholder="Number of people*"
-                                                   type="text">
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="submit" class="btn btn-primary"><span
-                                                class="btn-primary-text-book-table">Book a Table</span></button>
-                                    </div>
-                                </div>
-                            </div>
+          <div class="background__img">
+            <div class="img__book-table">
+              <div class="book-table__block">
+                <h2 class="block__table-title">Book a table</h2>
+                <p class="block__table-sub-title">
+                  Hurry Up to Book the Coziest Table Now!
+                </p>
+                <button
+                  type="button"
+                  class="mask-additional-button__block"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                >
+                  <span class="block__text-style">Book a Table</span>
+                </button>
+                <div
+                  class="modal fade"
+                  id="exampleModal"
+                  tabindex="-1"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <div class="header__btn-close">
+                          <div
+                            class="btn-close__icon"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                          ></div>
                         </div>
+                        <h2 class="modal-header__title">Booking</h2>
+                        <p class="modal-header__sub-title">Book a Table</p>
+                        <p class="modal-header__text">
+                          Please fill out the form below
+                        </p>
+                      </div>
+                      <div class="modal-body">
+                        <form
+                          action="submit"
+                          method="POST"
+                          class="modal-body__form-book-table"
+                        >
+                          <label for="name-input-book-table"></label>
+                          <input
+                            class="form-book-table__inputs-book-table"
+                            id="name-input-book-table"
+                            type="text"
+                            placeholder="Your Name*"
+                          />
+                          <label for="phone-input-book-table"></label>
+                          <input
+                            class="form-book-table__inputs-book-table"
+                            id="phone-input-book-table"
+                            type="text"
+                            placeholder="Phone number*"
+                          />
+                          <label for="email-input-book-table"></label>
+                          <input
+                            class="form-book-table__inputs-book-table"
+                            id="email-input-book-table"
+                            type="text"
+                            placeholder="Email*"
+                          />
+                          <label for="date-input-book-table"></label>
+                          <input
+                            class="form-book-table__inputs-book-table"
+                            placeholder="Choose date"
+                            type="text"
+                            onfocus="(this.type='date')"
+                            id="date-input-book-table"
+                          />
+                          <label for="number-people-input-book-table"></label>
+                          <input
+                            class="form-book-table__inputs-book-table"
+                            id="number-people-input-book-table"
+                            placeholder="Number of people*"
+                            type="text"
+                          />
+                        </form>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">
+                          <span class="btn-primary-text-book-table"
+                            >Book a Table</span
+                          >
+                        </button>
+                      </div>
                     </div>
+                  </div>
                 </div>
-                <div class="img__learn-more">
-                    <p class="learn-more__text">
-                        Get Advantage of Our Special Offers!
-                    </p>
-                    <div class="main-btn__block-learn-more">
-                        <a href="#blog" class="button-link main-btn__text"><span
-                                class="main-btn__text">Learn More</span></a>
-                    </div>
-                </div>
+              </div>
             </div>
+            <div class="img__learn-more">
+              <p class="learn-more__text">
+                Get Advantage of Our Special Offers!
+              </p>
+              <div class="main-btn__block-learn-more">
+                <a href="#blog" class="button-link main-btn__text"
+                  ><span class="main-btn__text">Learn More</span></a
+                >
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
 
       <!-- Reznik Anastasiia -->
       <section class="about-us" id="about-us">
@@ -695,7 +738,9 @@
                 alt="Shop Logo"
               />
             </div>
-            <hr class="solid">
+            <div class="divider-component">
+              <hr class="solid" />
+            </div>
             <h3 class="cards__title">20+</h3>
             <p class="cards__text">Years of experience</p>
           </div>
@@ -707,7 +752,9 @@
                 alt="Clerk Logo"
               />
             </div>
-            <hr class="solid">
+            <div class="divider-component">
+              <hr class="solid" />
+            </div>
             <h3 class="cards__title">25</h3>
             <p class="cards__text">Professional ice cream makers</p>
           </div>
@@ -719,7 +766,9 @@
                 alt="Ice Cream Logo"
               />
             </div>
-            <hr class="solid">
+            <div class="divider-component">
+              <hr class="solid" />
+            </div>
             <h3 class="cards__title">18+</h3>
             <p class="cards__text">Ice cream shops in New York</p>
           </div>
@@ -731,7 +780,9 @@
                 alt="Tastes Logo"
               />
             </div>
-            <hr class="solid">
+            <div class="divider-component">
+              <hr class="solid" />
+            </div>
             <h3 class="cards__title">50</h3>
             <p class="cards__text">Great tastes of ice cream</p>
           </div>
