add burger menu btn animation

--- a/about-us.html
+++ b/about-us.html
@@ -25,7 +25,7 @@
                 <div class="navbar-toggler" role="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="animated-icon">
-                        <span></span><span></span><span></span><span></span>
+                        <span></span><span></span><span></span>
                     </div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
