--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,7 @@
                   aria-label="Toggle navigation"
                 >
                   <div class="animated-icon">
-                    <span></span><span></span><span></span><span></span>
+                    <span></span><span></span><span></span>
                   </div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
