--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             aria-label="Toggle navigation"
           >
             <div class="animated-icon">
-              <span></span><span></span><span></span><span></span>
+              <span></span><span></span><span></span>
             </div>
           </div>
           <div class="collapse navbar-collapse" id="navbarNav">
