--- a/menu.html
+++ b/menu.html
@@ -46,7 +46,7 @@
             aria-label="Toggle navigation"
           >
             <div class="animated-icon">
-              <span></span><span></span><span></span><span></span>
+              <span></span><span></span><span></span>
             </div>
           </div>
           <div class="collapse navbar-collapse" id="navbarNav">
