--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav w-100 justify-content-between d-lg-flex">
-                        <div class="w-100 d-lg-flex justify-content-around">
+                        <div class="w-100 d-lg-flex justify-content-start gap-3">
                             <a class="nav-item nav-link align-self-center" href="about-us.html">About us</a>
                             <a class="nav-item nav-link align-self-center" href="menu.html">Menu</a>
                             <a class="nav-item nav-link align-self-center" href="#">Special</a>
@@ -41,7 +41,7 @@
                                 <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo" />
                             </div>
                         </a>
-                        <div class="w-100 d-lg-flex justify-content-around">
+                        <div class="w-100 d-lg-flex justify-content-end gap-3">
                             <a class="nav-item nav-link align-self-center" href="index.html#ingredients">Ingredients</a>
                             <a class="nav-item nav-link align-self-center" href="index.html#blog">Blog</a>
                             <a class="nav-item nav-link align-self-center" href="#">Contacts</a>
