--- a/contacts.html
+++ b/contacts.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <div class="navbar-nav w-100 justify-content-between d-lg-flex">
-                    <div class="w-100 d-lg-flex justify-content-around">
+                    <div class="w-100 d-lg-flex justify-content-start gap-3">
                       <a
                         class="nav-item nav-link align-self-center"
                         href="about-us.html"
@@ -78,7 +78,7 @@
                         />
                       </div>
                     </a>
-                    <div class="w-100 d-lg-flex justify-content-around">
+                    <div class="w-100 d-lg-flex justify-content-end gap-3">
                       <a
                         class="nav-item nav-link align-self-center"
                         href="index.html#ingredients"
