--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="collapse navbar-collapse" id="navbarNav">
             <div class="navbar-nav w-100 justify-content-between d-lg-flex">
-              <div class="w-100 d-lg-flex justify-content-around">
+              <div class="w-100 d-lg-flex justify-content-start gap-3">
                 <a
                   class="nav-item nav-link align-self-center"
                   href="about-us.html"
@@ -77,7 +77,7 @@
                   />
                 </div>
               </a>
-              <div class="w-100 d-lg-flex justify-content-around">
+              <div class="w-100 d-lg-flex justify-content-end gap-3">
                 <a
                   class="nav-item nav-link align-self-center"
                   href="#ingredients"
@@ -86,7 +86,7 @@
                 <a class="nav-item nav-link align-self-center" href="#blog"
                   >Blog</a
                 >
-                <a class="nav-item nav-link align-self-center" href="#"
+                <a class="nav-item nav-link align-self-center" href="contacts.html"
                   >Contacts</a
                 >
               </div>
