add email sender to contacts form

--- a/about-us.html
+++ b/about-us.html
@@ -59,7 +59,7 @@
         <section class="mission">
             <div class="container">
                 <div class="mission__text-block">
-                    <h2 class="mission__sub-title about-page__sub-title">Our mission s to offer the best experience and
+                    <h2 class="mission__sub-title about-page__sub-title">Our mission is to offer the best experience and
                         the tastiest desserts &
                         ice cream to uur clients.</h2>
                     <div class="mission__paragraph-block">
