--- a/contacts.html
+++ b/contacts.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    rel="shortcut icon"
-    type="image/png"
-    href="img/header/shortcut-icon.png"
-    sizes="96x96"
-  />
+      rel="shortcut icon"
+      type="image/png"
+      href="img/header/shortcut-icon.png"
+      sizes="96x96"
+    />
     <title>Contacts page</title>
 
     <link
@@ -18,166 +18,215 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/contacts-index.css">
-</head>
+    <link rel="stylesheet" href="css/contacts-index.css" />
+  </head>
 
-<body>
-  
-        <header class="header">
-            <nav class="navbar navbar-expand-lg bg-transparent container">
-              <div class="container-fluid">
+  <body>
+    <header class="header">
+      <nav class="navbar navbar-expand-lg bg-transparent container">
+        <div class="container-fluid">
+          <a
+            class="a-logo nav-item nav-link navbar-brand d-block d-lg-none"
+            href="index.html"
+          >
+            <div class="header__nav-image">
+              <img
+                width="129"
+                src="img/header/snowman-logo.svg"
+                alt="Mr. Snowman Logo"
+              />
+            </div>
+          </a>
+          <div
+            class="navbar-toggler"
+            role="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <div class="animated-icon">
+              <span></span><span></span><span></span>
+            </div>
+          </div>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav w-100 justify-content-between d-lg-flex">
+              <div class="w-100 d-lg-flex justify-content-start gap-3">
                 <a
-                  class="a-logo nav-item nav-link navbar-brand d-block d-lg-none"
-                  href="index.html"
+                  class="nav-item nav-link align-self-center"
+                  href="about-us.html"
+                  >About us</a
                 >
-                  <div class="header__nav-image">
-                    <img
-                      width="129"
-                      src="img/header/snowman-logo.svg"
-                      alt="Mr. Snowman Logo"
-                    />
-                  </div>
-                </a>
-                <div
-                  class="navbar-toggler"
-                  role="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarNav"
-                  aria-controls="navbarNav"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
+                <a class="nav-item nav-link align-self-center" href="menu.html"
+                  >Menu</a
                 >
-                  <div class="animated-icon">
-                    <span></span><span></span><span></span>
-                  </div>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <div class="navbar-nav w-100 justify-content-between d-lg-flex">
-                    <div class="w-100 d-lg-flex justify-content-start gap-3">
-                      <a
-                        class="nav-item nav-link align-self-center"
-                        href="about-us.html"
-                        >About us</a
-                      >
-                      <a class="nav-item nav-link align-self-center" href="menu.html"
-                        >Menu</a
-                      >
-                      <a class="nav-item nav-link align-self-center" href="#"
-                        >Special</a
-                      >
-                    </div>
-                    <a
-                      class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
-                      href="index.html"
-                    >
-                      <div class="header__nav-image">
-                        <img
-                          width="129"
-                          src="img/header/snowman-logo.svg"
-                          alt="Mr. Snowman Logo"
-                        />
-                      </div>
-                    </a>
-                    <div class="w-100 d-lg-flex justify-content-end gap-3">
-                      <a
-                        class="nav-item nav-link align-self-center"
-                        href="index.html#ingredients"
-                        >Ingredients</a
-                      >
-                      <a
-                        class="nav-item nav-link align-self-center"
-                        href="index.html#blog"
-                        >Blog</a
-                      >
-                      <a class="nav-item nav-link align-self-center" href="#"
-                        >Contacts</a
-                      >
-                    </div>
-                  </div>
-                </div>
+                <a class="nav-item nav-link align-self-center" href="#"
+                  >Special</a
+                >
               </div>
-            </nav>
-
-        <div class="contacts__title">
-            <h1 class="contacts__title-text">
-                Contacts</h1>
+              <a
+                class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
+                href="index.html"
+              >
+                <div class="header__nav-image">
+                  <img
+                    width="129"
+                    src="img/header/snowman-logo.svg"
+                    alt="Mr. Snowman Logo"
+                  />
+                </div>
+              </a>
+              <div class="w-100 d-lg-flex justify-content-end gap-3">
+                <a
+                  class="nav-item nav-link align-self-center"
+                  href="index.html#ingredients"
+                  >Ingredients</a
+                >
+                <a
+                  class="nav-item nav-link align-self-center"
+                  href="index.html#blog"
+                  >Blog</a
+                >
+                <a class="nav-item nav-link align-self-center" href="#"
+                  >Contacts</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
+      </nav>
+
+      <div class="contacts__title">
+        <h1 class="contacts__title-text">Contacts</h1>
+      </div>
     </header>
 
     <main>
-        <section class="contacts">
-            <div class="contacts__content">
-                <div class="contacts__phone">
-                    <div class="contacts__icons">
-                        <img class="contact-icon" src="img/contacts/contacts-phone.svg" alt="Phone icon">
-                    </div>
-                    <div class="contacts__phone-text">
-                        <p class="contacts__content-title">Phone</p>
-                        <p class="contacts__content-text">+1 (234) 567 89 00</p>
-                        <p class="contacts__content-text">+1 (234) 567 89 01</p>
-                    </div>
-                </div>
+      <section class="contacts">
+        <div class="contacts__content">
+          <div class="contacts__phone">
+            <div class="contacts__icons">
+              <img
+                class="contact-icon"
+                src="img/contacts/contacts-phone.svg"
+                alt="Phone icon"
+              />
+            </div>
+            <div class="contacts__phone-text">
+              <p class="contacts__content-title">Phone</p>
+              <p class="contacts__content-text">+1 (234) 567 89 00</p>
+              <p class="contacts__content-text">+1 (234) 567 89 01</p>
+            </div>
+          </div>
 
-                <div class="contacts__email">
-                    <div class="contacts__icons">
-                        <img class="contact-icon" src="img/contacts/contacts-email.svg" alt="Email icon">
-                    </div>
-
-                    <div class="contacts__email-text">
-                        <p class="contacts__content-title">Email</p>
-                        <p class="contacts__content-text">mr.snowman@email.com</p>
-                        <p class="contacts__content-text">mr.snowmanbook@email.com</p>
-                    </div>
-                </div>
-
-                <div class="contacts__address">
-                    <div class="contacts__icons">
-                        <img class="contact-icon" src="img/contacts/contacts-address.svg" alt="Address icon">
-                    </div>
-                    <div class="contacts__address-text">
-                        <p class="contacts__content-title">Cafe Address</p>
-                        <p class="contacts__content-text">176 Spring St, New York, NY 10012, United States</p>
-                    </div>
-                </div>
-
-                <div class="contacts__hours">
-                    <div class="contacts__icons">
-                        <img class="contact-icon" src="img/contacts/contacts-clock.svg" alt="Clock icon">
-                    </div>
-                    <div class="contacts__hours-text">
-                        <p class="contacts__content-title">Working Hours</p>
-                        <p class="contacts__content-text">Mon – Thu: 10:00 AM – 11 PM</p>
-                        <p class="contacts__content-text">Sat - Sun : 11:00 AM – 11 PM</p>
-                    </div>
-                </div>
+          <div class="contacts__email">
+            <div class="contacts__icons">
+              <img
+                class="contact-icon"
+                src="img/contacts/contacts-email.svg"
+                alt="Email icon"
+              />
             </div>
 
-
-
-        </section>
-
-        <section class="contacts__form">
-            <div class="contacts__form-content">
-                <div class="form__map">
-                  <iframe class="contacts__form-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.6968904681094!2d-74.0046522848047!3d40.724688679330455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2598c41edbcf7%3A0x5e47a0728e2f9b4b!2zMTc2IFNwcmluZyBTdCwgTmV3IFlvcmssIE5ZIDEwMDEyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1680380270637!5m2!1sru!2sua"  style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-
-                <div class="contacts__application-form">
-                    <div class="form__title">
-                      <p class="form__title-text">Hit Us Up!</p>
-                    </div>
-
-                    <div class="form__sub-title">
-                      <p class="form__sub-title-text">Fill out the form below and we'll contact you as soon as we can.</p>
-                    </div>
-                    <input class="form-contacts" type="text" placeholder= "Your Name*" required>
-                    <input class="form-contacts" type="text" placeholder= "Phone Number*" required>
-                    <input class="form-contacts" type="email"  placeholder="Email*" required>
-                    <input class="form-contacts" type="text" placeholder="Type your message">
-                    <button type="button" class="contacts__form-button">Send a Message</button>
-                </div>
+            <div class="contacts__email-text">
+              <p class="contacts__content-title">Email</p>
+              <p class="contacts__content-text">mr.snowman@email.com</p>
+              <p class="contacts__content-text">mr.snowmanbook@email.com</p>
             </div>
-        </section>
+          </div>
+
+          <div class="contacts__address">
+            <div class="contacts__icons">
+              <img
+                class="contact-icon"
+                src="img/contacts/contacts-address.svg"
+                alt="Address icon"
+              />
+            </div>
+            <div class="contacts__address-text">
+              <p class="contacts__content-title">Cafe Address</p>
+              <p class="contacts__content-text">
+                176 Spring St, New York, NY 10012, United States
+              </p>
+            </div>
+          </div>
+
+          <div class="contacts__hours">
+            <div class="contacts__icons">
+              <img
+                class="contact-icon"
+                src="img/contacts/contacts-clock.svg"
+                alt="Clock icon"
+              />
+            </div>
+            <div class="contacts__hours-text">
+              <p class="contacts__content-title">Working Hours</p>
+              <p class="contacts__content-text">Mon – Thu: 10:00 AM – 11 PM</p>
+              <p class="contacts__content-text">Sat - Sun : 11:00 AM – 11 PM</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="contacts__form">
+        <div class="contacts__form-content">
+          <div class="form__map">
+            <iframe
+              class="contacts__form-map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.6968904681094!2d-74.0046522848047!3d40.724688679330455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2598c41edbcf7%3A0x5e47a0728e2f9b4b!2zMTc2IFNwcmluZyBTdCwgTmV3IFlvcmssIE5ZIDEwMDEyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1680380270637!5m2!1sru!2sua"
+              style="border: 0"
+              allowfullscreen=""
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <form
+            class="contacts__application-form"
+            action="https://formspree.io/f/xnqygwqn"
+            method="POST"
+          >
+            <div class="form__title">
+              <p class="form__title-text">Hit Us Up!</p>
+            </div>
+
+            <div class="form__sub-title">
+              <p class="form__sub-title-text">
+                Fill out the form below and we'll contact you as soon as we can.
+              </p>
+            </div>
+            <input
+              class="form-contacts"
+              type="text"
+              placeholder="Your Name*"
+              name="name"
+              required
+            />
+            <input
+              class="form-contacts"
+              type="text"
+              placeholder="Phone Number*"
+              name="number"
+              required
+            />
+            <input
+              class="form-contacts"
+              type="email"
+              placeholder="Email*"
+              name="email"
+              required
+            />
+            <input
+              class="form-contacts"
+              type="text"
+              placeholder="Type your message"
+              name="message"
+            />
+            <button type="submit" class="contacts__form-button">
+              Send a Message
+            </button>
+          </form>
+        </div>
+      </section>
     </main>
 
     <!-- FOOTER HERE -->
@@ -361,10 +410,10 @@
       </div>
     </footer>
     <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"
-  ></script>
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/burger-menu.js"></script>
-</body>
+  </body>
 </html>
