--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             alt="Wave brand color"
           />
         </div>
-        <h2 class="about-us__title">About Us</h2>
+        <h2 class="about-us__title">About us</h2>
         <p class="about-us__subtitle">Our Story</p>
         <p class="about-us__text">
           Our mission is to offer the best experience and the tastiest desserts
